# tokmat

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md
.github/workflows/: ci.yml  release.yml
docs/: TEL_SPEC.md
examples/: benchmark_runner.rs
grammar/: tel.ebnf
src/: error.rs  extractor.rs  lib.rs  normalize.rs  tel.rs  token_model.rs  tokenizer.rs
tests/: python_behavior_regressions.rs  reference_corpus_harness.rs  tel_grammar_contract.rs
tests/reference_corpus/: cohorts.json  extractor.json  extractor_from_pytests.json  field_matching.json  tokenizer.json
