[package]
name = "tokmat"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jean Philippe Wan"]
description = "Standalone high-performance Canadian address parsing engine core"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokmat"
repository = "https://github.com/Jrakru/tokmat"
keywords = ["address", "parser", "tokenizer", "regex", "canada"]
categories = ["parser-implementations", "text-processing"]

[package.metadata]
copyright = "Copyright (c) 2026 Jean Philippe Wan"
standalone = true

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
toml = "0.8"
csv = "1.3"
rayon = "1.10"
unicode-general-category = "1.1.0"
pcre2 = "0.2"
lru = "0.12"

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
